Fix python findings
- Introduce 'Python_LOOKUP_VERSION' input variable to specify
  python version.
- We can use `Python_FIND_VIRTUALENV=ONLY` for venv python,
    `Python_FIND_FRAMEWORK` for mac, `Python_FIND_REGISTORY`
    for windows.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/CMakeLists.txt
+++ b/cmakelists/CMakeLists.txt
@@ -183,6 +183,7 @@ endif ()
 ################################################################
 add_subdirectory(gdal)
 
+# unit tests
 add_subdirectory(autotest/cpp)
 
 # please comment out if you want to exclude autotest from distribution.
