--- a/cmakelists/CMakeLists.txt
+++ b/cmakelists/CMakeLists.txt
@@ -181,6 +181,30 @@ if (RUN_CLANG_TIDY)
 endif ()
 
 ################################################################
+# Developer may want to specify some variable to find proper version
+#  Priority is as same order as follows:
+# 1. `Python_LOOKUP_VERSION`: specify minimum version to find.
+# 2. 'Python_FIND_VIRTUALENV': specify 'ONLY' to use virtualenv activated.
+# 3. `Python_ROOT`: specify installed location
+# 4. If nothing specified, use default behavior.
+#
+# for example
+#   $ cmake -DPython_LOOKUP_VERSION=3.6 ..
+#   $ cmake -DPython_FIND_VIRTUALENV=ONLY ..
+#   $ cmake -DPython_ROOT=C:\Python36 ..
+#
+if (Python_LOOKUP_VERSION)
+    set(Python_FIND_STRATEGY VERSION)
+    find_package(Python ${Python_LOOKUP_VERSION} COMPONENTS Interpreter Development NumPy)
+else ()
+    set(Python_FIND_STRATEGY LOCATION)
+    find_package(Python COMPONENTS Interpreter Development NumPy)
+endif ()
+
+include(FeatureSummary)
+set_package_properties(Python PROPERTIES PURPOSE "SWIG_PYTHON: Python binding")
+
+################################################################
 add_subdirectory(gdal)
 
 # unit tests
