--- a/ci/azure-pipelines/linux.yml
+++ b/ci/azure-pipelines/linux.yml
@@ -1,4 +1,7 @@
 steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.x'
 - script: |
     git clone https://github.com/osgeo/gdal.git
     ln -s $(Build.SourcesDirectory) $(Build.BinariesDirectory)/gdal/cmake4gdal
