Python: use Python_FOUND instead of _EXECUTABLE
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/autotest/CMakeLists.txt
+++ b/cmakelists/autotest/CMakeLists.txt
@@ -31,7 +31,7 @@ if (NOT DEFINED ENV{CTEST_PARALLEL_LEVEL})
     set(PARALLEL_OPTION "-j1")
 endif ()
 
-if (Python_EXECUTABLE)
+if (Python_FOUND)
     if (WIN32)
         set(_SEP ";")
     else ()
