CI: Mac: install doxygen
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/ci/azure-pipelines/osx.yml
+++ b/ci/azure-pipelines/osx.yml
@@ -2,7 +2,7 @@ steps:
 - script: |
     brew update
     brew outdated
-    brew install freexl libxml2 libspatialite geos proj libpng openjpeg giflib jpeg szip postgresql postgis openssl poppler
+    brew install freexl libxml2 libspatialite geos proj libpng openjpeg giflib jpeg szip postgresql postgis openssl poppler doxygen
     brew install ccache swig
   displayName: install dependencies
 - task: UsePythonVersion@0
