SWIG: deprecate swig configurations
- now automatically enables when language exist.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/swig/CMakeLists.txt
+++ b/cmakelists/gdal/swig/CMakeLists.txt
@@ -22,27 +22,15 @@ set(GDAL_SWIG_COMMON_INTERFACE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/include/MutiDimensional.i
     )
 
-include(CMakeDependentOption)
-cmake_dependent_option(SWIG_PYTHON "Build the Python binding" ON "HAVE_PYTHON" OFF)
-add_feature_info(SWIG_PYTHON SWIG_PYTHON "Python binding")
-if (SWIG_PYTHON)
-    add_subdirectory(python)
-endif ()
+add_subdirectory(python)
 
-cmake_dependent_option(SWIG_JAVA "Build the JAVA binding" OFF "HAVE_JAVA" OFF)
-add_feature_info(SWIG_JAVA SWIG_JAVA "Java binding")
-if (SWIG_JAVA)
+include(CMakeDependentOption)
+if (HAVE_JAVA)
     add_subdirectory(java)
 endif ()
-
-cmake_dependent_option(SWIG_PERL "Build the Perl binding" OFF "HAVE_PERL" OFF)
-if (SWIG_PERL)
-    add_feature_info(SWIG_PERL SWIG_PERL "Perl binding")
+if (HAVE_PERL)
     add_subdirectory(perl)
 endif ()
-
-cmake_dependent_option(SWIG_CSHARP "Build the C# binding" OFF "HAVE_CSHARP" OFF)
-add_feature_info(SWIG_CSHARP SWIG_CSHARP "CSHARP binding")
-if (SWIG_CSHARP)
+if (HAVE_CSHARP)
     add_subdirectory(csharp)
 endif ()
