SWIG: fix syntax
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/swig/python/CMakeLists.txt
+++ b/cmakelists/gdal/swig/python/CMakeLists.txt
@@ -123,7 +123,7 @@ if (Python_FOUND)
     else ()
         install(CODE "execute_process(COMMAND ${Python_EXECUTABLE} setup.py install WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
     endif ()
-elseif (Python_INCLUDE_DIRS and Python_LIBRARIES)
+elseif (Python_INCLUDE_DIRS AND Python_LIBRARIES)
     macro(py_ext name v source)
         set(GDAL_PYTHON_EXT_SOURCE_DIR "${gdal_python_csource_dir}")
         python_add_library(${name}${v} MODULE ${GDAL_PYTHON_EXT_SOURCE_DIR}/${source})
