--- a/cmakelists/gdal/frmts/netcdf/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/netcdf/CMakeLists.txt
@@ -6,6 +6,7 @@ set(_SOURCES netcdfdataset.h
                 gmtdataset.cpp  netcdfdataset.cpp
                 netcdflayer.cpp netcdfwriterconfig.cpp
                 netcdfmultidim.cpp netcdfvirtual.cpp netcdfvirtual.h
+    netcdfsg.h netcdfsg.cpp netcdfwriteutil.cpp
     )
 if(GDAL_ENABLE_NETCDF_PLUGIN)
     add_gdal_driver(TARGET gdal_netCDF SOURCES ${_SOURCES} PLUGIN)
