--- a/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
@@ -92,7 +92,7 @@ ogr_dependent_driver(csw CSW "HAVE_CURL")
 ogr_dependent_driver(dods DODS "HAVE_DAP;HAVE_LIBXML2")
 ogr_dependent_driver(dwg DWG "HAVE_TEIGHA")
 ogr_dependent_driver(filegdb FileGDB "HAVE_FGDB")
-ogr_dependent_driver(gft GFT "HAVE_CURL")
+# ogr_dependent_driver(gft GFT "HAVE_CURL")
 ogr_dependent_driver(libkml LibKML "HAVE_LIBKML;HAVE_BOOST")
 ogr_dependent_driver(nas "NAS/ALKIS" "HAVE_XERCESC")
 ogr_dependent_driver(plscenes PLSCENES "HAVE_CURL")
