--- a/cmakelists/gdal/swig/CMakeLists.txt
+++ b/cmakelists/gdal/swig/CMakeLists.txt
@@ -23,14 +23,12 @@ set(GDAL_SWIG_COMMON_INTERFACE_FILES
     )
 
 add_subdirectory(python)
-
-include(CMakeDependentOption)
-if (HAVE_JAVA)
+if (JNI_FOUND)
     add_subdirectory(java)
 endif ()
-if (HAVE_PERL)
-    add_subdirectory(perl)
+if (PERL_FOUND)
+    #add_subdirectory(perl)
 endif ()
-if (HAVE_CSHARP)
-    add_subdirectory(csharp)
+if (CSHARP_FOUND)
+    #add_subdirectory(csharp)
 endif ()
